--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,8 @@
     <div class="container header-contianer">
         <div class="row hidden-msg">
             <h2 class="col-xs-12 text-center">
-                IT IS A SAMPLE RESUME. TO CREATE SIMILAR RESUME FOR YOURSELF PLEASE <a href="https://contact.infoxnary.com">CONTACT US</a>.
+                IT IS A SAMPLE RESUME. TO CREATE SIMILAR RESUME FOR YOURSELF PLEASE <a
+                    href="https://contact.infoxnary.com">CONTACT US</a>.
             </h2>
         </div>
         <div class="row">
@@ -32,40 +33,34 @@
             <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 header-right">
                 <ul class="icons no-print">
                     <li>
-                        <a target="_blank" href="linkedin"
-                            class="button button--sacnite button--round-l">
+                        <a target="_blank" href="linkedin" class="button button--sacnite button--round-l">
                             <i class="fa fa-linkedin" title="Linkedin link"></i>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="facebook"
-                            class="button button--sacnite button--round-l">
+                        <a target="_blank" href="facebook" class="button button--sacnite button--round-l">
                             <i class="fa fa-facebook" title="Facebook link"></i>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="github"
-                            class="button button--sacnite button--round-l">
+                        <a target="_blank" href="github" class="button button--sacnite button--round-l">
                             <i class="fa fa-github" title="Github link"></i>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="instagram"
-                            class="button button--sacnite button--round-l">
+                        <a target="_blank" href="instagram" class="button button--sacnite button--round-l">
                             <i class="fa fa-instagram" title="Instagram link"></i>
                         </a>
                     </li>
                     <li>
-                        <a target="_blank" href="stackoverflow"
-                            class="button button--sacnite button--round-l">
+                        <a target="_blank" href="stackoverflow" class="button button--sacnite button--round-l">
                             <i class="fa fa-stack-overflow" title="Stackoverflow"></i>
                         </a>
                     </li>
                 </ul>
 
                 <p>
-                    Email ID : <a href="mailto: resume@infoxnary.com"
-                        target="_blank">resume@infoxnary.com</a>
+                    Email ID : <a href="mailto: resume@infoxnary.com" target="_blank">resume@infoxnary.com</a>
                 </p>
                 <p>
                     Phone : (+91) 7222876247
@@ -90,8 +85,7 @@
                     </div>
                     <div class="col-xs-12 col-sm-8 col-md-9 col-print-12">
                         <p>
-                            Currently working in <strong><a
-                                    href="https://www.infoxnary.com">Some-Company</a></strong>
+                            Currently working in <strong><a href="https://www.infoxnary.com">Some-Company</a></strong>
                             as a <b>Senior Software Developer</b>. I have more than 3 years of experience in <b>Web
                                 Application Development</b> in current Company.
                         </p>
@@ -116,7 +110,8 @@
                     </div>
                     <div class="col-xs-12 col-sm-8 col-md-9 col-print-12">
                         <p>
-                            <b>Senior Software Developer</b> at <b>Some-Company</b>. My core tasks during this period were
+                            <b>Senior Software Developer</b> at <b>Some-Company</b>. My core tasks during this period
+                            were
                             <b>System Administration</b> of production and test servers, Administration of development
                             server, <b>Training</b> and <b>Code review</b> of junior developers and continuous
                             maintenance of development server. During that period I have worked on Stripe API, OAuth
@@ -222,7 +217,8 @@
 
     <div class="container footer-container">
         <p>
-            To create similar online resume contact us on <a href="mailto:resume@infoxnary.com" target="_blank">resume@infoxnary.com</a>
+            To create similar online resume contact us on <a href="mailto:resume@infoxnary.com"
+                target="_blank">resume@infoxnary.com</a>
             <span class="last-updated">Last Updated on 20<sup>th</sup> March, 2019</span>
         </p>
     </div>
